@@ -3038,6 +3038,13 @@ and
 .B CCFLAGS
 variables,
 respectively.
+A returned
+.B -pthread
+option gets added to both the
+.B CCFLAGS
+and
+.B LINKFLAGS
+variables.
 
 '\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .TP
